--- a/index.html
+++ b/index.html
@@ -11,23 +11,22 @@ body {
     background: #111;
     color: #fff;
     overflow-x: hidden;
+    position: relative;
 }
 
+/* Header */
 header {
     text-align: center;
     padding: 50px 20px 20px;
 }
-
 header h1 {
     font-size: 4em;
     color: #ff66cc;
     text-shadow: 0 0 10px #ff66cc, 0 0 20px #ff66cc;
 }
-
 nav {
     margin-top: 20px;
 }
-
 nav a {
     color: #66ffff;
     text-decoration: none;
@@ -36,14 +35,11 @@ nav a {
     transition: 0.3s;
     position: relative;
 }
-
 nav a:hover {
     color: #ffcc00;
     text-shadow: 0 0 5px #ffcc00, 0 0 15px #ffcc00;
     animation: glitch 0.3s infinite;
 }
-
-/* glitch animation */
 @keyframes glitch {
     0% { text-shadow: 2px 0 #ff00ff, -2px 0 #00ffff; }
     20% { text-shadow: -2px 0 #ff00ff, 2px 0 #00ffff; }
@@ -53,24 +49,28 @@ nav a:hover {
     100% { text-shadow: -2px 0 #ff00ff, 2px 0 #00ffff; }
 }
 
+/* Album Section */
 section.album {
     max-width: 900px;
     margin: 50px auto;
     text-align: center;
+    position: relative;
+    z-index: 1;
 }
-
 .album img {
     width: 300px;
     max-width: 90%;
     border: 5px solid #ff66cc;
     box-shadow: 0 0 20px #ff66cc;
+    transition: transform 0.3s;
 }
-
+.album img:hover {
+    transform: scale(1.05) rotate(2deg);
+}
 .album h2 {
     font-size: 2em;
     margin: 20px 0;
 }
-
 .tracklist {
     margin-top: 20px;
     text-align: left;
@@ -79,16 +79,15 @@ section.album {
     padding: 15px;
     border-radius: 10px;
 }
-
 .tracklist audio {
     width: 100%;
     margin-top: 10px;
 }
-
 .tracklist.open {
     display: block;
 }
 
+/* Gallery Section */
 .gallery {
     max-width: 900px;
     margin: 50px auto;
@@ -96,42 +95,80 @@ section.album {
     flex-wrap: wrap;
     gap: 20px;
     justify-content: center;
+    position: relative;
+    z-index: 1;
 }
-
 .gallery img {
     width: 200px;
     border: 3px solid #66ffff;
     box-shadow: 0 0 10px #66ffff;
-    transition: 0.3s;
+    transition: 0.5s;
 }
-
 .gallery img:hover {
-    transform: scale(1.2) rotate(5deg);
-    box-shadow: 0 0 20px #ff66cc, 0 0 40px #66ffff;
+    transform: scale(1.2) rotate(5deg) skewX(5deg);
+    box-shadow: 0 0 30px #ff66cc, 0 0 50px #66ffff;
 }
 
-/* психоделический туман */
+/* Psychedelic Mist Layer */
 .mist {
     position: fixed;
     top: 0; left: 0;
     width: 100%; height: 100%;
     pointer-events: none;
     background: radial-gradient(circle at 50% 50%, rgba(255,255,255,0.05), rgba(0,0,0,0.1));
-    backdrop-filter: none; /* убран блюр, чтобы сайт не размывался */
-    animation: mistShift 15s infinite alternate;
     z-index: 5;
+    animation: mistShift 20s infinite alternate;
 }
-
 @keyframes mistShift {
     0% { background-position: 0% 0%; }
     50% { background-position: 100% 100%; }
     100% { background-position: 0% 0%; }
 }
+
+/* Floating Psychedelic Blobs */
+.blob {
+    position: fixed;
+    width: 100px; height: 100px;
+    border-radius: 50%;
+    opacity: 0.2;
+    animation: floatBlob linear infinite;
+    pointer-events: none;
+    z-index: 4;
+}
+@keyframes floatBlob {
+    0% { transform: translate(0,0) scale(1); }
+    50% { transform: translate(200px, 300px) scale(1.3); }
+    100% { transform: translate(-100px, 100px) scale(1); }
+}
+
+/* Glitch Lines */
+.line {
+    position: fixed;
+    height: 2px;
+    width: 100%;
+    background: rgba(255,255,255,0.05);
+    animation: lineMove 5s linear infinite;
+    pointer-events: none;
+    z-index: 6;
+}
+@keyframes lineMove {
+    0% { transform: translateY(0); }
+    100% { transform: translateY(100vh); }
+}
 </style>
 </head>
 <body>
 
+<!-- Mist and Psychedelic Layers -->
 <div class="mist"></div>
+
+<div class="blob" style="background: #ff00ff; top: 10%; left: 20%; animation-duration: 25s;"></div>
+<div class="blob" style="background: #00ffff; top: 50%; left: 70%; animation-duration: 30s;"></div>
+<div class="blob" style="background: #ffcc00; top: 80%; left: 40%; animation-duration: 35s;"></div>
+
+<div class="line" style="top: 0;"></div>
+<div class="line" style="top: 150px; animation-duration: 4s;"></div>
+<div class="line" style="top: 300px; animation-duration: 6s;"></div>
 
 <header>
     <h1>Увертюра Иордан</h1>
