--- a/index.html
+++ b/index.html
@@ -3,198 +3,232 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Увертюра Иордан</title>
+<title>Увертюра Иордан - Психоделический сайт</title>
 <style>
-body {
+/* === Общие стили === */
+html, body {
     margin: 0;
-    font-family: 'Arial', sans-serif;
-    background: #111;
-    color: #fff;
+    padding: 0;
     overflow-x: hidden;
+    font-family: 'Arial', sans-serif;
+    background: black;
+    color: white;
+    height: 100%;
+}
+
+body {
     position: relative;
 }
 
-/* Header */
-header {
-    text-align: center;
-    padding: 50px 20px 20px;
-}
-header h1 {
-    font-size: 4em;
-    color: #ff66cc;
-    text-shadow: 0 0 10px #ff66cc, 0 0 20px #ff66cc;
-}
-nav {
-    margin-top: 20px;
-}
-nav a {
-    color: #66ffff;
-    text-decoration: none;
-    margin: 0 15px;
-    font-size: 1.5em;
-    transition: 0.3s;
-    position: relative;
-}
-nav a:hover {
-    color: #ffcc00;
-    text-shadow: 0 0 5px #ffcc00, 0 0 15px #ffcc00;
-    animation: glitch 0.3s infinite;
-}
-@keyframes glitch {
-    0% { text-shadow: 2px 0 #ff00ff, -2px 0 #00ffff; }
-    20% { text-shadow: -2px 0 #ff00ff, 2px 0 #00ffff; }
-    40% { text-shadow: 2px 0 #00ffff, -2px 0 #ff00ff; }
-    60% { text-shadow: -2px 0 #00ffff, 2px 0 #ff00ff; }
-    80% { text-shadow: 2px 0 #ff00ff, -2px 0 #00ffff; }
-    100% { text-shadow: -2px 0 #ff00ff, 2px 0 #00ffff; }
-}
-
-/* Album Section */
-section.album {
-    max-width: 900px;
-    margin: 50px auto;
-    text-align: center;
-    position: relative;
-    z-index: 1;
-}
-.album img {
-    width: 300px;
-    max-width: 90%;
-    border: 5px solid #ff66cc;
-    box-shadow: 0 0 20px #ff66cc;
-    transition: transform 0.3s;
-}
-.album img:hover {
-    transform: scale(1.05) rotate(2deg);
-}
-.album h2 {
-    font-size: 2em;
-    margin: 20px 0;
-}
-.tracklist {
-    margin-top: 20px;
-    text-align: left;
-    display: none;
-    background: rgba(0,0,0,0.5);
-    padding: 15px;
-    border-radius: 10px;
-}
-.tracklist audio {
-    width: 100%;
-    margin-top: 10px;
-}
-.tracklist.open {
-    display: block;
-}
-
-/* Gallery Section */
-.gallery {
-    max-width: 900px;
-    margin: 50px auto;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: center;
-    position: relative;
-    z-index: 1;
-}
-.gallery img {
-    width: 200px;
-    border: 3px solid #66ffff;
-    box-shadow: 0 0 10px #66ffff;
-    transition: 0.5s;
-}
-.gallery img:hover {
-    transform: scale(1.2) rotate(5deg) skewX(5deg);
-    box-shadow: 0 0 30px #ff66cc, 0 0 50px #66ffff;
-}
-
-/* Psychedelic Mist Layer */
-.mist {
+/* === Психоделический фон === */
+#background {
     position: fixed;
     top: 0; left: 0;
     width: 100%; height: 100%;
-    pointer-events: none;
-    background: radial-gradient(circle at 50% 50%, rgba(255,255,255,0.05), rgba(0,0,0,0.1));
-    z-index: 5;
-    animation: mistShift 20s infinite alternate;
-}
-@keyframes mistShift {
-    0% { background-position: 0% 0%; }
-    50% { background-position: 100% 100%; }
-    100% { background-position: 0% 0%; }
+    z-index: -2;
+    background: linear-gradient(120deg, #ff0080, #8000ff, #00ffff);
+    background-size: 600% 600%;
+    animation: bgAnimation 20s ease infinite;
 }
 
-/* Floating Psychedelic Blobs */
-.blob {
-    position: fixed;
-    width: 100px; height: 100px;
-    border-radius: 50%;
-    opacity: 0.2;
-    animation: floatBlob linear infinite;
-    pointer-events: none;
-    z-index: 4;
-}
-@keyframes floatBlob {
-    0% { transform: translate(0,0) scale(1); }
-    50% { transform: translate(200px, 300px) scale(1.3); }
-    100% { transform: translate(-100px, 100px) scale(1); }
+@keyframes bgAnimation {
+    0% {background-position: 0% 50%;}
+    50% {background-position: 100% 50%;}
+    100% {background-position: 0% 50%;}
 }
 
-/* Glitch Lines */
-.line {
+/* === Туман и цветные волны === */
+#fog {
     position: fixed;
-    height: 2px;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    z-index: -1;
+    background: url('images/fog.png') repeat;
+    opacity: 0.3;
+    animation: fogMove 60s linear infinite;
+}
+
+@keyframes fogMove {
+    0% {background-position:0 0;}
+    100% {background-position:1000px 1000px;}
+}
+
+/* === Заголовок === */
+h1 {
+    text-align: center;
+    font-size: 4em;
+    margin-top: 50px;
+    position: relative;
+    text-shadow: 0 0 10px #ff00ff, 0 0 20px #00ffff;
+}
+
+/* === Навигация === */
+nav {
+    text-align: center;
+    margin: 30px 0;
+}
+
+nav a {
+    margin: 0 15px;
+    font-size: 1.5em;
+    color: #fff;
+    text-decoration: none;
+    transition: all 0.3s ease;
+    position: relative;
+}
+
+nav a:hover {
+    color: #ff00ff;
+    text-shadow: 0 0 5px #fff, 0 0 20px #ff00ff;
+}
+
+/* === Альбом === */
+.album {
+    width: 300px;
+    margin: 50px auto;
+    text-align: center;
+    transition: transform 0.3s ease;
+}
+
+.album img {
     width: 100%;
-    background: rgba(255,255,255,0.05);
-    animation: lineMove 5s linear infinite;
-    pointer-events: none;
-    z-index: 6;
+    border-radius: 10px;
+    transition: all 0.3s ease;
 }
-@keyframes lineMove {
-    0% { transform: translateY(0); }
-    100% { transform: translateY(100vh); }
+
+.album:hover img {
+    transform: scale(1.05) rotate(-2deg);
+    filter: hue-rotate(45deg);
+}
+
+/* === Трек-лист === */
+.tracklist {
+    margin-top: 20px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s ease;
+}
+
+.tracklist.open {
+    max-height: 500px;
+}
+
+/* === Галерея === */
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 50px 0;
+}
+
+.gallery img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    margin: 10px;
+    border-radius: 10px;
+    transition: all 0.5s ease;
+}
+
+.gallery img:hover {
+    transform: rotate(10deg) scale(1.2);
+    filter: hue-rotate(90deg) blur(1px);
+}
+
+/* === Глитч текстовые эффекты === */
+.glitch {
+    position: relative;
+    color: white;
+    font-size: 2em;
+    animation: glitchAnim 2s infinite;
+}
+
+@keyframes glitchAnim {
+    0% {text-shadow: 2px 2px red;}
+    20% {text-shadow: -2px -2px cyan;}
+    40% {text-shadow: 2px -2px lime;}
+    60% {text-shadow: -2px 2px yellow;}
+    80% {text-shadow: 2px 2px magenta;}
+    100% {text-shadow: -2px -2px red;}
+}
+
+/* === Эффекты самопроизвольных аномалий === */
+.anomaly {
+    position: absolute;
+    font-size: 1.5em;
+    color: rgba(255,255,255,0.7);
+    animation: float 5s infinite;
+    pointer-events: none;
+}
+
+@keyframes float {
+    0% {transform: translate(0,0) rotate(0deg);}
+    50% {transform: translate(50px, -50px) rotate(20deg);}
+    100% {transform: translate(0,0) rotate(0deg);}
 }
 </style>
 </head>
 <body>
 
-<!-- Mist and Psychedelic Layers -->
-<div class="mist"></div>
+<div id="background"></div>
+<div id="fog"></div>
 
-<div class="blob" style="background: #ff00ff; top: 10%; left: 20%; animation-duration: 25s;"></div>
-<div class="blob" style="background: #00ffff; top: 50%; left: 70%; animation-duration: 30s;"></div>
-<div class="blob" style="background: #ffcc00; top: 80%; left: 40%; animation-duration: 35s;"></div>
+<h1 class="glitch">Увертюра Иордан</h1>
 
-<div class="line" style="top: 0;"></div>
-<div class="line" style="top: 150px; animation-duration: 4s;"></div>
-<div class="line" style="top: 300px; animation-duration: 6s;"></div>
+<nav>
+    <a href="#album">Альбом</a>
+    <a href="#gallery">Галерея</a>
+</nav>
 
-<header>
-    <h1>Увертюра Иордан</h1>
-    <nav>
-        <a href="#album">Альбом</a>
-        <a href="#gallery">Галерея</a>
-    </nav>
-</header>
-
-<section class="album" id="album">
+<!-- === Альбом === -->
+<section id="album" class="album">
     <img src="images/album1.jpg" alt="Обложка альбома">
-    <h2>Психоделический Альбом</h2>
-    <button onclick="document.querySelector('.tracklist').classList.toggle('open')">Показать треки</button>
-    <div class="tracklist">
-        <p>Трек 1</p>
-        <audio controls src="audio/track1.mp3"></audio>
-        <p>Трек 2</p>
-        <audio controls src="audio/track2.mp3"></audio>
-        <p>Трек 3</p>
-        <audio controls src="audio/track3.mp3"></audio>
+    <h2 class="glitch">Психоделическая симфония</h2>
+    <button id="toggleTracklist">Показать треки</button>
+    <div class="tracklist" id="tracklist">
+        <p>1. Трек 1 <audio controls src="audio/track1.mp3"></audio></p>
+        <p>2. Трек 2 <audio controls src="audio/track2.mp3"></audio></p>
+        <p>3. Трек 3 <audio controls src="audio/track3.mp3"></audio></p>
     </div>
 </section>
 
-<section class="gallery" id="gallery">
-    <img src="images/photo1.jpg" alt="Галерея 1">
+<!-- === Галерея === -->
+<section id="gallery" class="gallery">
+    <img src="images/photo1.jpg" alt="Фото 1">
+    <img src="images/gallery1.jpg" alt="Фото 2">
 </section>
+
+<!-- === JS для интерактивности === -->
+<script>
+// === Разворачиваем трек-лист ===
+const toggleBtn = document.getElementById('toggleTracklist');
+const tracklist = document.getElementById('tracklist');
+
+toggleBtn.addEventListener('click', () => {
+    tracklist.classList.toggle('open');
+});
+
+// === Самопроизвольные аномалии ===
+function createAnomaly() {
+    const anomaly = document.createElement('div');
+    anomaly.className = 'anomaly glitch';
+    anomaly.textContent = '★';
+    anomaly.style.top = Math.random() * window.innerHeight + 'px';
+    anomaly.style.left = Math.random() * window.innerWidth + 'px';
+    document.body.appendChild(anomaly);
+    setTimeout(() => anomaly.remove(), 4000);
+}
+setInterval(createAnomaly, 1500);
+
+// === Цветовые глитчи на текст при движении курсора ===
+document.addEventListener('mousemove', e => {
+    document.querySelectorAll('.glitch').forEach(el => {
+        const dx = (Math.random() - 0.5) * 4;
+        const dy = (Math.random() - 0.5) * 4;
+        el.style.transform = `translate(${dx}px,${dy}px)`;
+    });
+});
+</script>
 
 </body>
 </html>
