--- a/index.html
+++ b/index.html
@@ -11,24 +11,20 @@ html, body {
     padding: 0;
     overflow-x: hidden;
     font-family: 'Arial', sans-serif;
+    height: 100%;
     background: black;
     color: white;
-    height: 100%;
 }
 
-body {
-    position: relative;
-}
-
-/* === Психоделический фон === */
+/* === Фон: переливающийся градиент === */
 #background {
     position: fixed;
     top: 0; left: 0;
     width: 100%; height: 100%;
-    z-index: -2;
+    z-index: -3;
     background: linear-gradient(120deg, #ff0080, #8000ff, #00ffff);
     background-size: 600% 600%;
-    animation: bgAnimation 20s ease infinite;
+    animation: bgAnimation 25s ease infinite;
 }
 
 @keyframes bgAnimation {
@@ -37,15 +33,16 @@ body {
     100% {background-position: 0% 50%;}
 }
 
-/* === Туман и цветные волны === */
+/* === Туман === */
 #fog {
     position: fixed;
     top: 0; left: 0;
     width: 100%; height: 100%;
-    z-index: -1;
+    z-index: -2;
     background: url('images/fog.png') repeat;
-    opacity: 0.3;
+    opacity: 0.35;
     animation: fogMove 60s linear infinite;
+    pointer-events: none;
 }
 
 @keyframes fogMove {
@@ -60,6 +57,7 @@ h1 {
     margin-top: 50px;
     position: relative;
     text-shadow: 0 0 10px #ff00ff, 0 0 20px #00ffff;
+    transition: transform 0.1s;
 }
 
 /* === Навигация === */
@@ -87,7 +85,7 @@ nav a:hover {
     width: 300px;
     margin: 50px auto;
     text-align: center;
-    transition: transform 0.3s ease;
+    transition: transform 0.1s ease;
 }
 
 .album img {
@@ -152,7 +150,7 @@ nav a:hover {
     100% {text-shadow: -2px -2px red;}
 }
 
-/* === Эффекты самопроизвольных аномалий === */
+/* === Аномалии === */
 .anomaly {
     position: absolute;
     font-size: 1.5em;
@@ -180,7 +178,6 @@ nav a:hover {
     <a href="#gallery">Галерея</a>
 </nav>
 
-<!-- === Альбом === -->
 <section id="album" class="album">
     <img src="images/album1.jpg" alt="Обложка альбома">
     <h2 class="glitch">Психоделическая симфония</h2>
@@ -192,18 +189,15 @@ nav a:hover {
     </div>
 </section>
 
-<!-- === Галерея === -->
 <section id="gallery" class="gallery">
     <img src="images/photo1.jpg" alt="Фото 1">
     <img src="images/gallery1.jpg" alt="Фото 2">
 </section>
 
-<!-- === JS для интерактивности === -->
 <script>
 // === Разворачиваем трек-лист ===
 const toggleBtn = document.getElementById('toggleTracklist');
 const tracklist = document.getElementById('tracklist');
-
 toggleBtn.addEventListener('click', () => {
     tracklist.classList.toggle('open');
 });
@@ -218,14 +212,16 @@ function createAnomaly() {
     document.body.appendChild(anomaly);
     setTimeout(() => anomaly.remove(), 4000);
 }
-setInterval(createAnomaly, 1500);
+setInterval(createAnomaly, 1200);
 
-// === Цветовые глитчи на текст при движении курсора ===
+// === Усиленный курсор-глитч ===
 document.addEventListener('mousemove', e => {
-    document.querySelectorAll('.glitch').forEach(el => {
-        const dx = (Math.random() - 0.5) * 4;
-        const dy = (Math.random() - 0.5) * 4;
-        el.style.transform = `translate(${dx}px,${dy}px)`;
+    const dx = (e.clientX - window.innerWidth/2)/50;
+    const dy = (e.clientY - window.innerHeight/2)/50;
+    document.querySelectorAll('h1, .album, .glitch').forEach(el => {
+        const rx = (Math.random()-0.5)*3;
+        const ry = (Math.random()-0.5)*3;
+        el.style.transform = `translate(${dx+rx}px,${dy+ry}px) rotate(${rx*5}deg)`;
     });
 });
 </script>
