--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Увертюра Иордан - Психоделический сайт</title>
+<title>Увертюра Иордан - Психоделика</title>
 <style>
-/* === Общие стили === */
 html, body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    font-family: 'Arial', sans-serif;
+    font-family: Arial, sans-serif;
     height: 100%;
     background: black;
     color: white;
@@ -24,13 +23,13 @@ html, body {
     z-index: -3;
     background: linear-gradient(120deg, #ff0080, #8000ff, #00ffff);
     background-size: 600% 600%;
-    animation: bgAnimation 25s ease infinite;
+    animation: bgAnim 30s ease infinite;
 }
 
-@keyframes bgAnimation {
-    0% {background-position: 0% 50%;}
-    50% {background-position: 100% 50%;}
-    100% {background-position: 0% 50%;}
+@keyframes bgAnim {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
 }
 
 /* === Туман === */
@@ -40,14 +39,14 @@ html, body {
     width: 100%; height: 100%;
     z-index: -2;
     background: url('images/fog.png') repeat;
-    opacity: 0.35;
-    animation: fogMove 60s linear infinite;
+    opacity: 0.4;
     pointer-events: none;
+    animation: fogMove 80s linear infinite;
 }
 
 @keyframes fogMove {
-    0% {background-position:0 0;}
-    100% {background-position:1000px 1000px;}
+    0% { background-position:0 0; }
+    100% { background-position:2000px 2000px; }
 }
 
 /* === Заголовок === */
@@ -55,7 +54,6 @@ h1 {
     text-align: center;
     font-size: 4em;
     margin-top: 50px;
-    position: relative;
     text-shadow: 0 0 10px #ff00ff, 0 0 20px #00ffff;
     transition: transform 0.1s;
 }
@@ -72,7 +70,6 @@ nav a {
     color: #fff;
     text-decoration: none;
     transition: all 0.3s ease;
-    position: relative;
 }
 
 nav a:hover {
@@ -85,7 +82,6 @@ nav a:hover {
     width: 300px;
     margin: 50px auto;
     text-align: center;
-    transition: transform 0.1s ease;
 }
 
 .album img {
@@ -133,7 +129,7 @@ nav a:hover {
     filter: hue-rotate(90deg) blur(1px);
 }
 
-/* === Глитч текстовые эффекты === */
+/* === Глитч текст === */
 .glitch {
     position: relative;
     color: white;
@@ -191,30 +187,29 @@ nav a:hover {
 
 <section id="gallery" class="gallery">
     <img src="images/photo1.jpg" alt="Фото 1">
-    <img src="images/gallery1.jpg" alt="Фото 2">
 </section>
 
 <script>
-// === Разворачиваем трек-лист ===
+// Разворачиваем трек-лист
 const toggleBtn = document.getElementById('toggleTracklist');
 const tracklist = document.getElementById('tracklist');
-toggleBtn.addEventListener('click', () => {
-    tracklist.classList.toggle('open');
-});
+toggleBtn.addEventListener('click', () => tracklist.classList.toggle('open'));
 
-// === Самопроизвольные аномалии ===
+// Частые аномалии
 function createAnomaly() {
     const anomaly = document.createElement('div');
     anomaly.className = 'anomaly glitch';
     anomaly.textContent = '★';
     anomaly.style.top = Math.random() * window.innerHeight + 'px';
     anomaly.style.left = Math.random() * window.innerWidth + 'px';
+    anomaly.style.fontSize = (10 + Math.random()*30) + 'px';
     document.body.appendChild(anomaly);
     setTimeout(() => anomaly.remove(), 4000);
 }
-setInterval(createAnomaly, 1200);
+// Аномалии каждые 0.3 секунды
+setInterval(createAnomaly, 300);
 
-// === Усиленный курсор-глитч ===
+// Усиленный курсор-глитч
 document.addEventListener('mousemove', e => {
     const dx = (e.clientX - window.innerWidth/2)/50;
     const dy = (e.clientY - window.innerHeight/2)/50;
