--- a/index.html
+++ b/index.html
@@ -3,154 +3,113 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Увертюра Иордан - Психоделика</title>
+<title>Увертюра Иордан</title>
 <style>
-html, body {
+/* --- Сброс и базовые стили --- */
+body, html {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    font-family: Arial, sans-serif;
-    height: 100%;
-    background: black;
-    color: white;
+    font-family: 'Arial', sans-serif;
+    color: #fff;
 }
 
-/* === Canvas фон === */
+h1, h2 {
+    text-align: center;
+    margin: 20px 0;
+}
+
+/* --- Canvas под фон --- */
 #bgCanvas {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: -5;
+    z-index: 0; /* Фон под контентом */
 }
 
-/* === Заголовок === */
-h1 {
-    text-align: center;
-    font-size: 4em;
-    margin-top: 50px;
-    text-shadow: 0 0 10px #ff00ff, 0 0 20px #00ffff;
-    transition: transform 0.1s;
+/* --- Контент поверх фона --- */
+#content {
+    position: relative;
+    z-index: 1;
+    padding: 50px;
 }
 
-/* === Навигация === */
-nav {
-    text-align: center;
-    margin: 30px 0;
-}
-
-nav a {
-    margin: 0 15px;
-    font-size: 1.5em;
-    color: #fff;
-    text-decoration: none;
-    transition: all 0.3s ease;
-}
-
-nav a:hover {
-    color: #ff00ff;
-    text-shadow: 0 0 5px #fff, 0 0 20px #ff00ff;
-}
-
-/* === Альбом === */
+/* --- Альбом --- */
 .album {
-    width: 300px;
+    max-width: 400px;
     margin: 50px auto;
     text-align: center;
+    background: rgba(0,0,0,0.4);
+    padding: 20px;
+    border-radius: 15px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.5);
+    transition: transform 0.3s;
+}
+.album:hover {
+    transform: scale(1.05);
 }
 
 .album img {
     width: 100%;
     border-radius: 10px;
-    transition: all 0.3s ease;
 }
 
-.album:hover img {
-    transform: scale(1.05) rotate(-2deg);
-    filter: hue-rotate(45deg);
-}
-
-/* === Трек-лист === */
-.tracklist {
-    margin-top: 20px;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.5s ease;
-}
-
-.tracklist.open {
-    max-height: 500px;
-}
-
-/* === Кнопка без тряски === */
-#toggleTracklist {
-    cursor: pointer;
+/* --- Кнопка раскрытия трек-листа --- */
+.tracklist-btn {
+    margin: 10px 0;
     padding: 10px 20px;
-    font-size: 1em;
+    background: #ff00ff;
     border: none;
-    border-radius: 5px;
-    background: #222;
     color: white;
-    margin-top: 10px;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: all 0.3s;
+}
+.tracklist-btn:hover {
+    background: #00ffff;
 }
 
-#toggleTracklist:hover {
-    background: #444;
+/* --- Трек-лист --- */
+.tracklist {
+    display: none;
+    list-style: none;
+    padding: 0;
+}
+.tracklist li {
+    margin: 5px 0;
 }
 
-/* === Галерея === */
+/* --- Галерея --- */
 .gallery {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
-    margin: 50px 0;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-top: 50px;
 }
-
 .gallery img {
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     object-fit: cover;
-    margin: 10px;
     border-radius: 10px;
-    transition: all 0.5s ease;
+    transition: transform 0.3s, filter 0.3s;
 }
-
 .gallery img:hover {
     transform: rotate(10deg) scale(1.2);
-    filter: hue-rotate(90deg) blur(1px);
+    filter: hue-rotate(90deg) brightness(1.3);
 }
 
-/* === Глитч текст === */
-.glitch {
-    position: relative;
-    color: white;
-    font-size: 2em;
-    animation: glitchAnim 2s infinite;
+/* --- Мелкие аномалии текста --- */
+h1 span {
+    display: inline-block;
+    transition: transform 0.3s;
 }
-
-@keyframes glitchAnim {
-    0% {text-shadow: 2px 2px red;}
-    20% {text-shadow: -2px -2px cyan;}
-    40% {text-shadow: 2px -2px lime;}
-    60% {text-shadow: -2px 2px yellow;}
-    80% {text-shadow: 2px 2px magenta;}
-    100% {text-shadow: -2px -2px red;}
-}
-
-/* === Аномалии === */
-.anomaly {
-    position: absolute;
-    font-size: 1.5em;
-    color: rgba(255,255,255,0.7);
-    animation: float 5s infinite;
-    pointer-events: none;
-}
-
-@keyframes float {
-    0% {transform: translate(0,0) rotate(0deg);}
-    50% {transform: translate(50px, -50px) rotate(20deg);}
-    100% {transform: translate(0,0) rotate(0deg);}
+h1 span:hover {
+    transform: rotate(-10deg) scale(1.2);
+    color: #ff00ff;
 }
 </style>
 </head>
@@ -158,109 +117,73 @@ nav a:hover {
 
 <canvas id="bgCanvas"></canvas>
 
-<h1 class="glitch">Увертюра Иордан</h1>
+<div id="content">
+    <h1>
+        <span>У</span><span>в</span><span>е</span><span>р</span><span>т</span><span>ю</span><span>р</span><span>а</span>
+        <span> </span>
+        <span>И</span><span>о</span><span>р</span><span>д</span><span>а</span><span>н</span>
+    </h1>
 
-<nav>
-    <a href="#album">Альбом</a>
-    <a href="#gallery">Галерея</a>
-</nav>
-
-<section id="album" class="album">
-    <img src="images/album1.jpg" alt="Обложка альбома">
-    <h2 class="glitch">Психоделическая симфония</h2>
-    <button id="toggleTracklist">Показать треки</button>
-    <div class="tracklist" id="tracklist">
-        <p>1. Трек 1 <audio controls src="audio/track1.mp3"></audio></p>
-        <p>2. Трек 2 <audio controls src="audio/track2.mp3"></audio></p>
-        <p>3. Трек 3 <audio controls src="audio/track3.mp3"></audio></p>
+    <div class="album">
+        <img src="images/album1.jpg" alt="Альбом 1">
+        <button class="tracklist-btn">Показать треки</button>
+        <ul class="tracklist">
+            <li>Трек 1</li>
+            <li>Трек 2</li>
+            <li>Трек 3</li>
+        </ul>
     </div>
-</section>
 
-<section id="gallery" class="gallery">
-    <img src="images/photo1.jpg" alt="Фото 1">
-</section>
+    <div class="gallery">
+        <img src="images/photo1.jpg" alt="Фото 1">
+        <img src="images/album1.jpg" alt="Альбом">
+    </div>
+</div>
 
 <script>
-// Canvas фон с градиентом и туманом
+// --- Трек-лист ---
+const btn = document.querySelector('.tracklist-btn');
+const list = document.querySelector('.tracklist');
+btn.addEventListener('click', () => {
+    list.style.display = list.style.display === 'block' ? 'none' : 'block';
+});
+
+// --- Canvas фон с туманом и градиентом ---
 const canvas = document.getElementById('bgCanvas');
 const ctx = canvas.getContext('2d');
-canvas.width = window.innerWidth;
-canvas.height = window.innerHeight;
 
-let gradientOffset = 0;
-
-// Туманные облака
-const fogs = [];
-for(let i=0;i<30;i++){
-    fogs.push({
-        x: Math.random()*canvas.width,
-        y: Math.random()*canvas.height,
-        radius: 50 + Math.random()*100,
-        speed: 0.2 + Math.random()*0.5,
-        opacity: 0.1 + Math.random()*0.2
-    });
-}
-
-function draw() {
-    // Градиент
-    const gradient = ctx.createLinearGradient(0,0,canvas.width,canvas.height);
-    gradient.addColorStop(0, `hsl(${(gradientOffset)%360}, 80%, 50%)`);
-    gradient.addColorStop(0.5, `hsl(${(gradientOffset+120)%360}, 80%, 50%)`);
-    gradient.addColorStop(1, `hsl(${(gradientOffset+240)%360}, 80%, 50%)`);
-    ctx.fillStyle = gradient;
-    ctx.fillRect(0,0,canvas.width,canvas.height);
-
-    // Туман
-    fogs.forEach(fog => {
-        ctx.beginPath();
-        ctx.arc(fog.x, fog.y, fog.radius, 0, Math.PI*2);
-        ctx.fillStyle = `rgba(255,255,255,${fog.opacity})`;
-        ctx.fill();
-        fog.x += fog.speed;
-        if(fog.x - fog.radius > canvas.width) fog.x = -fog.radius;
-    });
-
-    gradientOffset += 0.2;
-    requestAnimationFrame(draw);
-}
-
-draw();
-
-// Разворачиваем трек-лист
-const toggleBtn = document.getElementById('toggleTracklist');
-const tracklist = document.getElementById('tracklist');
-toggleBtn.addEventListener('click', () => tracklist.classList.toggle('open'));
-
-// Частые аномалии
-function createAnomaly() {
-    const anomaly = document.createElement('div');
-    anomaly.className = 'anomaly glitch';
-    anomaly.textContent = '★';
-    anomaly.style.top = Math.random() * window.innerHeight + 'px';
-    anomaly.style.left = Math.random() * window.innerWidth + 'px';
-    anomaly.style.fontSize = (10 + Math.random()*30) + 'px';
-    document.body.appendChild(anomaly);
-    setTimeout(() => anomaly.remove(), 4000);
-}
-setInterval(createAnomaly, 300);
-
-// Усиленный курсор-глитч (кроме кнопки)
-document.addEventListener('mousemove', e => {
-    const dx = (e.clientX - window.innerWidth/2)/50;
-    const dy = (e.clientY - window.innerHeight/2)/50;
-    document.querySelectorAll('h1, .album img, .glitch').forEach(el => {
-        if(el.id === 'toggleTracklist') return;
-        const rx = (Math.random()-0.5)*3;
-        const ry = (Math.random()-0.5)*3;
-        el.style.transform = `translate(${dx+rx}px,${dy+ry}px) rotate(${rx*5}deg)`;
-    });
-});
-
-// Подгонка canvas при изменении окна
-window.addEventListener('resize', () => {
+function resizeCanvas() {
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
-});
+}
+resizeCanvas();
+window.addEventListener('resize', resizeCanvas);
+
+let t = 0;
+function draw() {
+    t += 0.01;
+
+    // Градиент
+    const gradient = ctx.createLinearGradient(0, 0, canvas.width, canvas.height);
+    gradient.addColorStop(0, `hsl(${(t*50)%360}, 80%, 50%)`);
+    gradient.addColorStop(1, `hsl(${(t*50+180)%360}, 70%, 40%)`);
+    ctx.fillStyle = gradient;
+    ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+    // Туман
+    for (let i = 0; i < 50; i++) {
+        ctx.fillStyle = `rgba(255,255,255,0.02)`;
+        const x = Math.random()*canvas.width;
+        const y = Math.random()*canvas.height;
+        const size = Math.random()*200;
+        ctx.beginPath();
+        ctx.ellipse(x, y, size, size*0.6, 0, 0, 2*Math.PI);
+        ctx.fill();
+    }
+
+    requestAnimationFrame(draw);
+}
+draw();
 </script>
 
 </body>
