--- a/index.html
+++ b/index.html
@@ -5,185 +5,178 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Увертюра Иордан</title>
 <style>
-/* --- Сброс и базовые стили --- */
-body, html {
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
+body {
+    margin:0;
+    padding:0;
+    overflow-x:hidden;
     font-family: 'Arial', sans-serif;
-    color: #fff;
+    color:#fff;
+    background: #111;
 }
 
-h1, h2 {
-    text-align: center;
-    margin: 20px 0;
-}
-
-/* --- Canvas под фон --- */
-#bgCanvas {
+/* Фон — градиент + туман */
+#background {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 0; /* Фон под контентом */
+    top:0; left:0;
+    width:100%; height:100%;
+    z-index:-1;
 }
 
-/* --- Контент поверх фона --- */
-#content {
-    position: relative;
-    z-index: 1;
-    padding: 50px;
+/* Заголовок с глитч-эффектом */
+h1 {
+    font-size:4em;
+    text-align:center;
+    margin-top:50px;
+    cursor:pointer;
+}
+h1 span {
+    display:inline-block;
+    transition: transform 0.1s, color 0.1s;
 }
 
-/* --- Альбом --- */
+/* Альбом и трек-лист */
 .album {
-    max-width: 400px;
-    margin: 50px auto;
-    text-align: center;
-    background: rgba(0,0,0,0.4);
-    padding: 20px;
-    border-radius: 15px;
-    box-shadow: 0 0 20px rgba(0,0,0,0.5);
-    transition: transform 0.3s;
+    text-align:center;
+    margin-top:100px;
 }
-.album:hover {
-    transform: scale(1.05);
-}
-
 .album img {
-    width: 100%;
-    border-radius: 10px;
+    width:300px;
+    border:2px solid #fff;
+}
+.tracks {
+    margin-top:20px;
+    display:none;
+    flex-direction: column;
+    gap:10px;
+}
+.tracks audio {
+    width:300px;
 }
 
-/* --- Кнопка раскрытия трек-листа --- */
-.tracklist-btn {
-    margin: 10px 0;
-    padding: 10px 20px;
-    background: #ff00ff;
-    border: none;
-    color: white;
-    font-weight: bold;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: all 0.3s;
+/* Кнопка раскрытия */
+.show-tracks {
+    margin-top:15px;
+    padding:10px 20px;
+    background: #222;
+    border:1px solid #fff;
+    cursor:pointer;
+    color:#fff;
+    font-size:1em;
 }
-.tracklist-btn:hover {
-    background: #00ffff;
+.show-tracks:hover {
+    background:#444;
 }
 
-/* --- Трек-лист --- */
-.tracklist {
-    display: none;
-    list-style: none;
-    padding: 0;
-}
-.tracklist li {
-    margin: 5px 0;
-}
-
-/* --- Галерея --- */
+/* Галерея */
 .gallery {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 20px;
-    margin-top: 50px;
+    display:flex;
+    justify-content:center;
+    flex-wrap:wrap;
+    gap:20px;
+    margin-top:100px;
 }
 .gallery img {
-    width: 150px;
-    height: 150px;
-    object-fit: cover;
-    border-radius: 10px;
+    width:200px;
     transition: transform 0.3s, filter 0.3s;
+    cursor:pointer;
 }
 .gallery img:hover {
-    transform: rotate(10deg) scale(1.2);
-    filter: hue-rotate(90deg) brightness(1.3);
-}
-
-/* --- Мелкие аномалии текста --- */
-h1 span {
-    display: inline-block;
-    transition: transform 0.3s;
-}
-h1 span:hover {
-    transform: rotate(-10deg) scale(1.2);
-    color: #ff00ff;
+    transform:scale(1.2) rotate(5deg);
+    filter:hue-rotate(90deg) blur(1px);
 }
 </style>
 </head>
 <body>
 
-<canvas id="bgCanvas"></canvas>
+<!-- Canvas для тумана и градиента -->
+<canvas id="background"></canvas>
 
-<div id="content">
-    <h1>
-        <span>У</span><span>в</span><span>е</span><span>р</span><span>т</span><span>ю</span><span>р</span><span>а</span>
-        <span> </span>
-        <span>И</span><span>о</span><span>р</span><span>д</span><span>а</span><span>н</span>
-    </h1>
+<h1 id="glitch-title">
+    <span>У</span><span>в</span><span>е</span><span>р</span><span>т</span><span>ю</span><span>р</span><span>а</span>
+    <span> </span>
+    <span>И</span><span>о</span><span>р</span><span>д</span><span>а</span><span>н</span>
+</h1>
 
-    <div class="album">
-        <img src="images/album1.jpg" alt="Альбом 1">
-        <button class="tracklist-btn">Показать треки</button>
-        <ul class="tracklist">
-            <li>Трек 1</li>
-            <li>Трек 2</li>
-            <li>Трек 3</li>
-        </ul>
-    </div>
-
-    <div class="gallery">
-        <img src="images/photo1.jpg" alt="Фото 1">
-        <img src="images/album1.jpg" alt="Альбом">
+<div class="album">
+    <img src="images/album1.jpg" alt="Обложка альбома">
+    <div><button class="show-tracks">Показать треки</button></div>
+    <div class="tracks">
+        <audio controls src="audio/track1.mp3"></audio>
+        <audio controls src="audio/track2.mp3"></audio>
+        <audio controls src="audio/track3.mp3"></audio>
     </div>
 </div>
 
+<div class="gallery">
+    <img src="images/photo1.jpg" alt="Фото 1">
+</div>
+
 <script>
-// --- Трек-лист ---
-const btn = document.querySelector('.tracklist-btn');
-const list = document.querySelector('.tracklist');
-btn.addEventListener('click', () => {
-    list.style.display = list.style.display === 'block' ? 'none' : 'block';
+// --- Глитч-эффект на заголовке ---
+const letters = document.querySelectorAll('#glitch-title span');
+
+document.addEventListener('mousemove', e => {
+    const x = e.clientX / window.innerWidth;
+    const y = e.clientY / window.innerHeight;
+
+    letters.forEach(letter => {
+        const offsetX = (Math.random() - 0.5) * 10 * x;
+        const offsetY = (Math.random() - 0.5) * 10 * y;
+        const rotate = (Math.random() - 0.5) * 20 * x;
+        const hueShift = (Math.random() * 60 - 30) * y;
+
+        letter.style.transform = `translate(${offsetX}px, ${offsetY}px) rotate(${rotate}deg)`;
+        letter.style.color = `hsl(${hueShift + 200}, 80%, 50%)`;
+    });
 });
 
-// --- Canvas фон с туманом и градиентом ---
-const canvas = document.getElementById('bgCanvas');
+// --- Кнопка раскрытия треков ---
+const btn = document.querySelector('.show-tracks');
+const tracks = document.querySelector('.tracks');
+btn.addEventListener('click', () => {
+    if(tracks.style.display === 'flex'){
+        tracks.style.display = 'none';
+    } else {
+        tracks.style.display = 'flex';
+        tracks.style.flexDirection = 'column';
+    }
+});
+
+// --- Фон: градиент + туман ---
+const canvas = document.getElementById('background');
 const ctx = canvas.getContext('2d');
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
 
-function resizeCanvas() {
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
-}
-resizeCanvas();
-window.addEventListener('resize', resizeCanvas);
-
-let t = 0;
-function draw() {
-    t += 0.01;
-
+function drawFog(){
+    ctx.clearRect(0,0,canvas.width,canvas.height);
+    
     // Градиент
-    const gradient = ctx.createLinearGradient(0, 0, canvas.width, canvas.height);
-    gradient.addColorStop(0, `hsl(${(t*50)%360}, 80%, 50%)`);
-    gradient.addColorStop(1, `hsl(${(t*50+180)%360}, 70%, 40%)`);
-    ctx.fillStyle = gradient;
-    ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-    // Туман
-    for (let i = 0; i < 50; i++) {
-        ctx.fillStyle = `rgba(255,255,255,0.02)`;
+    const grad = ctx.createLinearGradient(0,0,canvas.width,canvas.height);
+    grad.addColorStop(0,'#440044');
+    grad.addColorStop(1,'#002244');
+    ctx.fillStyle = grad;
+    ctx.fillRect(0,0,canvas.width,canvas.height);
+    
+    // Псевдо-туман
+    for(let i=0;i<100;i++){
         const x = Math.random()*canvas.width;
         const y = Math.random()*canvas.height;
-        const size = Math.random()*200;
+        const radius = Math.random()*100+50;
+        const alpha = Math.random()*0.05;
         ctx.beginPath();
-        ctx.ellipse(x, y, size, size*0.6, 0, 0, 2*Math.PI);
+        ctx.arc(x,y,radius,0,Math.PI*2);
+        ctx.fillStyle = `rgba(200,200,255,${alpha})`;
         ctx.fill();
     }
-
-    requestAnimationFrame(draw);
+    requestAnimationFrame(drawFog);
 }
-draw();
+drawFog();
+
+window.addEventListener('resize', ()=>{
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+});
 </script>
 
 </body>
